tests/gen-derivation/inputvalidation/bad-param-names/expected
1/1: Building ValidateInput (ValidateInput.idr)
Error: While processing right hand side of genY_unnamed_argument. Error during reflection: Explicit argument must be named and must not shadow any other name

ValidateInput:14:50--14:53
 10 |   MkY : Y Int String
 11 | 
 12 | --- Not all arguments are named ---
 13 | 
 14 | genY_unnamed_argument : Fuel -> (a, b : Type) -> Nat -> Gen MaybeEmpty $ Y a b
                                                       ^^^

Error: While processing right hand side of genY_shadowed_by_auto_argument. Error during reflection: Explicit argument must be named and must not shadow any other name

ValidateInput:19:58--19:62
 15 | genY_unnamed_argument = deriveGen
 16 | 
 17 | --- Arguments shadowing ---
 18 | 
 19 | genY_shadowed_by_auto_argument : DecEq a => Fuel -> (a : Type) -> (b : Type) -> Gen MaybeEmpty $ Y a b
                                                               ^^^^

Error: While processing right hand side of genY_shadowed_by_other_argument. Error during reflection: Explicit argument must be named and must not shadow any other name

ValidateInput:22:76--22:80
 18 | 
 19 | genY_shadowed_by_auto_argument : DecEq a => Fuel -> (a : Type) -> (b : Type) -> Gen MaybeEmpty $ Y a b
 20 | genY_shadowed_by_auto_argument = deriveGen
 21 | 
 22 | genY_shadowed_by_other_argument : Fuel -> (a : Type) -> (b : Type) -> (a : Type) -> Gen MaybeEmpty $ Y a b
                                                                                 ^^^^

